# solana-wallet

./: .gitignore  Anchor.toml  Cargo.toml  README.md  audit-day-53-token-2022-mints.mjs  backup-wallet.json  capture-day-44-explorer.spec.mjs  capture-day-45-collection.spec.mjs  capture-day-47-mutated-nft.spec.mjs  capture-day-50-transfer-fee.spec.mjs  capture-day-51-terminal-proof.mjs  capture-day-52-terminal-proof.mjs  capture-day-53-terminal-proof.mjs  capture-day-54-terminal-proof.mjs  capture-day-59-terminal-proof.mjs  capture-day-60-terminal-proof.mjs  capture-day-63-assets.mjs  capture-day-65-terminal-proof.mjs  capture-day-66-terminal-proof.mjs  capture-day-67-terminal-proof.mjs  compare-networks.mjs  create-wallet.mjs  day-39-token-extension-comparison.md  day-40-revocable-credential-token.md  day-43-1-of-1-spl-nft.md  day-44-metadata.json  day-44-token-2022-nft-metadata.md  day-45-collection.json  day-45-sketch-1.json  day-45-sketch-2.json  day-45-token-2022-collection.md  day-46-on-chain-audit-output.txt  day-47-metadata-mutation.md  day-47-sketch-1-mutated.json  day-50-token-2022-transfer-fee.md  day-50-transfer-fee-output.txt  day-50-transfer-fee-result.json  day-51-terminal-proof.html  day-51-token-2022-transfer-fee-withdraw.md  day-51-transfer-fee-withdraw-output.txt  (+42 more)
day-4-wallet/: index.html  package-lock.json  package.json
day-4-wallet/src/: main.js
programs/counter/: Cargo.toml
programs/counter/src/: lib.rs
programs/counter/tests/: counter.rs
src/: main.js
